--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -9,7 +9,7 @@ jobs:
       # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: fly init --import=fly-template.toml
+      - run: flyctl init --import=fly-template.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - run: git config user.name "Automated" && git config user.email "actions@users.noreply.github.com" && git add fly.toml && git commit -m "init toml" && git push 
