--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ jobs:
       # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
       - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl secrets set TAILSCALE_AUTH_KEY=${{ secrets.TAILSCALE_AUTH_KEY }}
       - run: flyctl launch --remote-only --now --copy-config --name test-tailscale --region nrt
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
